@@ -3,34 +3,32 @@
 # Contributor: Valmantas Palikša <walmis@balticum-tv.lt>
 # Contributor: blasse <koralik@gmail.com>
 # Contributor: Maciej Wilczyński <wiqert@gmail.com>
-# Contributor: Abhishek Dasgupta <abhidg@gmail.com>
 
 
 pkgname=blueman
-pkgver=1.20
+pkgver=1.21
 pkgrel=1
 pkgdesc="GTK+ bluetooth manager"
 arch=('i686' 'x86_64')
-license=("GPL")
+license=('GPL')
 url="http://blueman-project.org"
-depends=('python-notify' 'bluez>=4.25' 'dbus-python' 'gtk2>=2.12' 'glib2>=2.12'\
-         'pygobject>=2.12' 'startup-notification>=0.9' 'obex-data-server>=0.4.3'\
-         'polkit-gnome' 'notification-daemon' 'xdg-utils' 'hicolor-icon-theme')
+depends=('python-notify' 'bluez>=4.58' 'dbus-python' 'gtk2>=2.18.5' 'glib2>=2.22.3' \
+         'pygobject>=2.20.0' 'startup-notification>=0.10' 'obex-data-server>=0.4.4' \
+         'polkit-gnome' 'xdg-utils' 'hicolor-icon-theme')
 makedepends=('pyrex>=0.9.8.0' 'pkgconfig' 'intltool')
-optdepends=("dnsmasq: For creating PAN network" "gconf>=2.0: For gconf configuration support" \
-"pulseaudio: To use the pulseaudio plugin")
-conflicts=(bluez-gnome)
-options=(!libtool)
+optdepends=('dnsmasq: For creating PAN network' 'gconf: For gconf configuration support' \
+'pulseaudio: To use the pulseaudio plugin' 'notification-daemon, libnotify: for desktop notifications')
+options=('!libtool')
 install=$pkgname.install
 source=(http://download.tuxfamily.org/blueman/${pkgname}-${pkgver}.tar.gz)
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
-# Arch is still using NM 0.7.1, so we have to enable HAL.
-	./configure --prefix=/usr --sysconfdir=/etc --enable-hal \
-	   --libexecdir=/usr/lib/blueman/ --with-no-runtime-deps-check
-	make clean
+	./configure --prefix=/usr \
+		--sysconfdir=/etc \
+		--enable-hal \
+	   	--libexecdir=/usr/lib/blueman \
+		--with-no-runtime-deps-check
 	make || return 1
 	make DESTDIR="${pkgdir}" install || return 1
 }
-
-md5sums=('5ea6d6710783e27ad9fcc8db7fda7ace')
+md5sums=('26b70341b3d3da28da62c917c8b20377')
