@@ -1,3 +1,8 @@
+blugman(1.21-1)
+
+ * new upstrea release
+ * moved notification-daemon to optdepends FS#17486
+
 blueman (1.20-1)
 
  * New upstream release
